# vgi-scholar

./: CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  scholar_worker.py  serve.py
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
scripts/: run_sql_e2e.py
test/sql/: scholar_search.test
tests/: harness.py  mock_server.py  test_live_smoke.py  test_mock_e2e.py  test_providers.py
tests/fixtures/: arxiv.xml  crossref.json  openalex.json
vgi_scholar/: __init__.py  http_client.py  schema_utils.py  tables.py
vgi_scholar/providers/: __init__.py  arxiv.py  base.py  crossref.py  openalex.py
